Add fields to API response
